Bug 506612 - "Move to Folder" context menu feature is broken, trying to write a nonsensical folder path
Summary: "Move to Folder" context menu feature is broken, trying to write a nonsensica...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.04.2
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-05 01:58 UTC by paninomaninodesu
Modified: 2025-07-11 09:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
the error message (126.92 KB, image/jpeg)
2025-07-05 01:58 UTC, paninomaninodesu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description paninomaninodesu 2025-07-05 01:58:59 UTC
Created attachment 182964 [details]
the error message

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY
Move to New Folder is creating the folder/file paths wrong, or at least is what it seems.

STEPS TO REPRODUCE
1. right click a file
2. select move to new folder
3. give new folder a name and try to create it

OBSERVED RESULT
Dolphin gives an error message saying it can't create the folder.

EXPECTED RESULT
A new folder be created and the selected file moved to it.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Tumbleweed
KDE Plasma Version: 6.4.1
KDE Frameworks Version: 6.15
Qt Version: 6.9.1

ADDITIONAL INFORMATION
I was under the illusion that this was happening, without reason, only on two folders, and specially annoying because it's the two folders where I actually use this feature a few times each day.
But it's not the folders, what causes the problem is the files I'm trying to move.
Those two folders have files with names that causes the problem. Creating a folder with a file name that contains something like "_00:23:35_158" isn't allowed, right? That's the problem, it seems when a file have some forbidden characters in it's file name Dolphin gets confused and tries to use that file name for the name of the folder instead of the one you gave when Dolphin asked.

If I try to nove a file with a simpler file name than Dolphin is able to create a new folder and move the file to inside it.

See in the image I annexed with the error message?
The "/Test" which is the name of the new folder comes at the end, after the name of the file.
On the same image if I rename any of those files and remove the forbidden characters it works.

At least I think this is the problem, and I think it was working in version 25.4.1, yesterday morning it stopped working without reason (along with video previews on Info Panel). I checked and Dolphin is version 25.4.2, must have arrived when I was checking for updates without noticing.
Comment 1 Bug Janitor Service 2025-07-10 09:49:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/998
Comment 2 Méven 2025-07-11 09:30:52 UTC
Git commit 50b2bce82d6604702e327f594448c7fee0f85a4a by Méven Car.
Committed on 11/07/2025 at 07:49.
Pushed by meven into branch 'master'.

movetonewfolder: allow to move folders

 * Set a widget parent for the job.
 * Better deduce the current working directory

M  +10   -8    src/itemactions/movetonewfolderitemaction.cpp
M  +2    -1    src/itemactions/movetonewfolderitemaction.json

https://invent.kde.org/system/dolphin/-/commit/50b2bce82d6604702e327f594448c7fee0f85a4a