movetonewfolder: allow to move folders

* Set a widget parent for the job.
 * Better deduce the current working directory

BUG: 506612